--- a/myworld/templates/index.html
+++ b/myworld/templates/index.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix</title>
-    <link rel="stylesheet" href="style.css">
+{% extends "base.html" %}
+{% load static %}
+{% block title %}
+
+{% endblock title%}
+
+
+    {% block others %} 
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
+    {% endblock others %}
 </head>
 <body class="bg-black text-gray-100">
     <nav class="flex justify-between items-center py-3 px-4 fixed w-full z-50">
