--- a/myworld/templates/base.html
+++ b/myworld/templates/base.html
@@ -14,8 +14,9 @@
         <link rel="stylesheet" href="{% static "style.css" %}">
         {% block others %}{% endblock others %}
     </head>
-    <body>
+    <body class="bg-black text-gray-100">
         {% block content %}
+        
         {% endblock content %}
         
         <script src="" async defer></script>
