--- a/myworld/templates/index.html
+++ b/myworld/templates/index.html
@@ -22,7 +22,7 @@
             </button>
         </div>
     </nav>
-    <header class="min-h-screen bg-black bg-opacity-75 showcase border-gray-600 border-b-8 flex justify-center items-center bg-no-repeat"  style="background-image: url('assets/background_netflix.jpg');">
+    <header class="min-h-screen bg-black bg-opacity-75 showcase border-gray-600 border-b-8 flex justify-center items-center bg-no-repeat"  style="background-image: url( % static 'background_netflix.jpg' %);">
         <div class="z-10 h-full py-32 md:py-0 text-gray-100 text-center flex items-center flex-col">
             <h1 class="font-semibold text-4xl md:text-5xl w-10/12 md:w-3/4 text-center">
                 Unlimited movies, TV shows, and more.
@@ -58,13 +58,13 @@
             </h5>
         </div>
         <div class='md:w-1/2 flex justify-center items-center'>
-            <img src="assets/tv.png" class="w-8/12" alt="">
+            <img src="{% static 'tv.png' %}" class="w-8/12" alt="">
         </div>
     </section>
 
     <section class='flex flex-col md:flex-row items-center border-gray-900 border-b-8' style="min-height: 70vh;">
         <div class='md:w-1/2 flex justify-center items-center order-2'>
-            <img src="assets/mobile-0819.jpg" class="w-8/12" alt="">
+            <img src="{% static 'mobile-0819.jpg'%} " class="w-8/12" alt="">
         </div>
 
         <div class="md:w-1/2 flex flex-col justify-center text-center md:text-left p-5 md:p-10">
@@ -88,7 +88,7 @@
             </h5>
         </div>
         <div class='md:w-1/2 flex justify-center items-center'>
-            <img src="assets/netflix_kid.png" class="w-8/12" alt="">
+            <img src="{% static "netflix_kid.png" %}" class="w-8/12" alt="">
         </div>
     </section>
     <footer class=" px-5 py-10 ">
