--- a/myworld/templates/account/login.html
+++ b/myworld/templates/account/login.html
@@ -4,11 +4,13 @@
     login
 {% endblock title %}
 
+{% block others %}
 
+<script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
 
-    <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
-</head>
-<body>
+{% endblock others %}
+
+{% block content %}
     <nav class="flex justify-between items-center py-3 px-4 fixed w-full z-50">
         <div class="w-6/12">
             <img src="assets/netflix.png" alt="logo" class="w-5/12 md:w-2/12">
@@ -58,5 +60,4 @@
             </form>
         </div>
     </header>
-</body>
-</html>
+    {% endblock content %}
