--- a/myworld/templates/account/login.html
+++ b/myworld/templates/account/login.html
@@ -20,6 +20,7 @@
                 <h1 class="text-4xl font-semibold text-center ">
                     Log In
                 </h1>
+                {% {% csrf_token %}%}
                 {% if form.errors %}
 
                 <div class="text-center my-4 text-primary_red">
