--- a/myworld/templates/account/login.html
+++ b/myworld/templates/account/login.html
@@ -57,7 +57,7 @@
 
                 <div class="text-center my-4">
                     <p>
-                        Do not have account <a href="/signup.html" class="text-blue-600"> Sign Up</a>
+                        Do not have account <a href="{% url 'account_signup' %}" class="text-blue-600"> Sign Up</a>
                     </p>
                 </div>
             </form>
