--- a/myworld/templates/account/signup.html
+++ b/myworld/templates/account/signup.html
@@ -1,11 +1,17 @@
 {% extends '../base.html' %}
 {% load static %}
 
-    <title>Netflix Sign Up</title>
-    <link rel="stylesheet" href="style.css">
+{% block title %}
+Sign Up
+{% endblock title %}
+
+    {% block others %}
+
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
-</head>
-<body>
+
+    {% endblock others %}
+
+    {% block content %}
     <nav class="flex justify-between items-center py-3 px-4 fixed w-full z-50">
         <div class="w-6/12">
             <img src="assets/netflix.png" alt="logo" class="w-5/12 md:w-2/12">
@@ -63,5 +69,4 @@
             </form>
         </div>
     </header>
-</body>
-</html>
+{% endblock content %}
