--- a/myworld/templates/account/signup.html
+++ b/myworld/templates/account/signup.html
@@ -21,14 +21,19 @@ Sign Up
                 <h1 class="text-4xl font-semibold text-center ">
                     Sign Up
                 </h1>
-                <div class=" text-center my-4">
-                    <p class="text-primary_red ">
-                        Email already in use
-                    </p>
-                    <p class="text-primary_red ">
-                        Password must be greater than 8 characters
-                    </p>
+
+                {% if form.errors %}
+
+                <div class="text-center my-4 text-primary_red">
+                
+                <p class="text-primary_red">
+
+                    {{form.non_feild_errors}}
+
+                </p>
                 </div>
+                {% endif %}   
+                
                 <div> 
                     <Label class='text-lg font-medium mb-3'>
                         Email
@@ -39,7 +44,7 @@ Sign Up
                     <Label class='text-lg font-medium mb-3'>
                         Password
                     </Label>
-                    <input class="p-2 bg-gray-200 rounded-sm text-gray-900 outline-none block w-full" type="password" name="password" id="id_password" placeholder="Password">
+                    <input class="p-2 bg-gray-200 rounded-sm text-gray-900 outline-none block w-full" type="password1" name="password" id="id_password1" placeholder="Password">
                 </div>
                 <div class='my-3'> 
                     <Label class='text-lg font-medium mb-3'>
