--- a/myworld/templates/account/signup.html
+++ b/myworld/templates/account/signup.html
@@ -17,23 +17,24 @@ Sign Up
 
     <header class="min-h-screen w-full bg-black bg-opacity-75 showcase relative border-gray-600 border-b-8 flex justify-center py-20 bg-no-repeat"  style="background-image: url('{% static 'background_netflix.jpg' %} );">
         <div class="z-10 min-h-full py-32 md:py-0 text-gray-100 w-6/12  flex items-center flex-col">
-            <form class="bg-black bg-opacity-70 min-h-full py-8 px-4 w-8/12 rounded-md" >
+            <form method="POST" class="bg-black bg-opacity-70 min-h-full py-8 px-4 w-8/12 rounded-md" >
                 <h1 class="text-4xl font-semibold text-center ">
                     Sign Up
                 </h1>
+                {% csrf_token %}
 
                 {% if form.errors %}
 
                 <div class="text-center my-4 text-primary_red">
+
+                    {{form.errors.email}}
+                    {{form.errors.password1}}
+                    {{form.errors.password2}}
+
                 
-                <p class="text-primary_red">
-
-                    {{form.non_feild_errors}}
-
-                </p>
                 </div>
                 {% endif %}   
-                
+
                 <div> 
                     <Label class='text-lg font-medium mb-3'>
                         Email
@@ -57,6 +58,10 @@ Sign Up
                         Sign Up
                     </button>
                 </div>
+
+                {% if redirect_feild_value %}
+                <input type="hidden" name = "{{ redirect_feild_name}}" value="{{redirect_feild_value}}" />
+                {% endif %}
 
                 <div class="text-center mt-4">
                     <p>
