--- a/myworld/templates/partials/navbar.html
+++ b/myworld/templates/partials/navbar.html
@@ -14,10 +14,13 @@
         </button>
         </form>
         {% else %}
+
+        <a href="{% url 'account_login' %}">
         
         <button class='bg-primary_red py-1 px-3 text-white md:text-lg rounded-md'>
             Sign In 
         </button>
+    </a>
 
         {% endif %}
 
