--- a/myworld/templates/base.html
+++ b/myworld/templates/base.html
@@ -14,11 +14,24 @@
         <link rel="stylesheet" href="{% static "style.css" %}">
         {% block others %}{% endblock others %}
     </head>
-    <body class="bg-black text-gray-100">
+    <body class="bg-black text-gray-100 font-primary">
         {% block content %}
 
         {% endblock content %}
         
-        <script src="" async defer></script>
+        <script>
+            const nav = document.querySelector('nav')
+
+            document.addEventListner("scroll", e=> {
+                if(scrollY > 100){
+                    nav.classList.add('bg-gray-900')
+                }else {
+                    nav.classList.remove('bg-gray-900')
+                }
+            })
+
+        
+        </script>
+    
     </body>
 </html>
