--- a/myworld/templates/profileList.html
+++ b/myworld/templates/profileList.html
@@ -1,20 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Netflix - Profile</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <nav class="flex justify-between items-center py-3 px-4 fixed w-full z-50">
-        <div class="w-6/12">
-            <img src="assets/netflix.png" alt="logo" class="w-5/12 md:w-2/12">
-        </div>
+{% extends "base.html" %}
+   {% block title %}
+   Profile
+   {% endblock title %}
 
-        
-    </nav>
+   {% block content %}
+
+   {% include "partials/navbar.html" %}
+   
     <section class='bg-primary_black min-h-screen py-20 md:py-0 flex-col flex justify-center items-center'>
         <h2 class="text-center font-medium text-5xl my-4 text-gray-100">
             Who's watching ?
@@ -49,5 +41,4 @@
             </button>
         </div>
     </section>
-</body>
-</html>
+{% endblock content %}
