--- a/myworld/templates/profileList.html
+++ b/myworld/templates/profileList.html
@@ -13,27 +13,20 @@
         </h2>
 
         <div class="flex flex-wrap justify-center items-center w-10/12  md:w-6/12">
-            <div class="w-32 h-32 m-4  bg-blue-500 rounded-md cursor-pointer">
+           {% for profile in profiles %}
+           <a href="#">
+            <div class="w-32 h-32 m-4  flex flex-col justify-center align-center bg-blue-500 rounded-md cursor-pointer">
+                <p class="text-6xl">
+                    {{ profile.name | slice:":1" }}
+                </p>
+                <p class="text-lg">
+                    {{ profile.name}}
+                </p>
 
             </div>
-
-            <div class="w-32 h-32 m-4  bg-blue-500 rounded-md cursor-pointer">
-
-            </div>
-
-            <div class="w-32 h-32 m-4  bg-blue-500 rounded-md cursor-pointer">
-
-            </div>
-
-            <div class="w-32 h-32 m-4  bg-blue-500 rounded-md cursor-pointer">
-
-            </div>
-            <div class="w-32 h-32 m-4  bg-blue-500 rounded-md cursor-pointer">
-
-            </div>
-            <div class="w-32 h-32 m-4  bg-blue-500 rounded-md cursor-pointer">
-
-            </div>
+        </a>
+            {% endfor %}
+           
         </div>
         <div class="flex justify-center items-center">
             <button class="px-4 py-2 rounded-md outline-none bg-gray-400 text-gray-100">
