--- a/myworld/templates/profileList.html
+++ b/myworld/templates/profileList.html
@@ -12,7 +12,7 @@
             Who's watching ?
         </h2>
 
-        <div class="flex flex-wrap justify-center items-center w-10/12  md:w-6/12">
+        <div class="flex flex-wrap justify-center text-center items-center w-10/12  md:w-6/12">
            {% for profile in profiles %}
            <a href="#">
             <div class="w-32 h-32 m-4  flex flex-col justify-center align-center bg-blue-500 rounded-md cursor-pointer">
@@ -29,9 +29,11 @@
            
         </div>
         <div class="flex justify-center items-center">
+            <a href="{% url 'core:profile_create' %}">
             <button class="px-4 py-2 rounded-md outline-none bg-gray-400 text-gray-100">
                 Add A New Profile
             </button>
+        </a>
         </div>
     </section>
 {% endblock content %}
