--- a/myworld/templates/profileList.html
+++ b/myworld/templates/profileList.html
@@ -14,7 +14,7 @@
 
         <div class="flex flex-wrap justify-center text-center items-center w-10/12  md:w-6/12">
            {% for profile in profiles %}
-           <a href="#">
+           <a href="{% url 'core:watch' profile_id=profile.uuid %}">
             <div class="w-32 h-32 m-4  flex flex-col justify-center align-center bg-blue-500 rounded-md cursor-pointer">
                 <p class="text-6xl">
                     {{ profile.name | slice:":1" }}
