--- a/myworld/templates/showMovie.html
+++ b/myworld/templates/showMovie.html
@@ -14,7 +14,7 @@ Movie
 
     {% block content %}
 
-{% include partials/navbar.html %}
+{% include 'partials/navbar.html' %}
     <main class='bg-primary_black h-full w-full '>
         
         <video src="assets/test.mp4" controls class="w-full h-screen player"></video>
