--- a/myworld/templates/movieDetail.html
+++ b/myworld/templates/movieDetail.html
@@ -9,6 +9,8 @@ Detail page
 {% endblock others %}
 
 {% block content %}
+{% include 'partials/navbar.html' %}
+
     <main class='bg-primary_black min-h-screen w-full'>
         <section class="h-screen relative bg-no-repeat pb-8 pl-6 flex justify-end items-end bg-cover" style="background-image: url('assets/movie.webp');">
             <div>
