movies list 3 and admin fix

--- a/myworld/templates/movieList.html
+++ b/myworld/templates/movieList.html
@@ -63,7 +63,7 @@ Enjoy Netflix
                 {% for movie in movies %}
                     <a href="#">
                     <div class="flex-shrink-0  h-40 m-4  bg-blue-500 rounded-md cursor-pointer overflow-hidden w-40" >
-                        <img src="{{movies.flyer.url}}" class="w-full h-full " alt="">
+                        <img src="{{movie.flyer.url}}" class="w-full h-full " alt="">
                     </div>
                 </a>
                 {% endfor %}
