--- a/myworld/templates/movieList.html
+++ b/myworld/templates/movieList.html
@@ -61,7 +61,7 @@ Enjoy Netflix
                 <div class="flex justify-center  items-center min-w-full  movie_lis">
 
                 {% for movie in movies %}
-                    <a href="#">
+                    <a href="{% url 'core:show_det' movie_id=movie.uuid %}">
                     <div class="flex-shrink-0  h-40 m-4  bg-blue-500 rounded-md cursor-pointer overflow-hidden w-40" >
                         <img src="{{movie.flyer.url}}" class="w-full h-full " alt="">
                     </div>
