--- a/myworld/templates/movieDetail.html
+++ b/myworld/templates/movieDetail.html
@@ -21,14 +21,14 @@ Detail page
                     {{movie.description}}
                     </p>
                 <div class="flex my-4">
-
-                    <button class="flex items-center bg-white py-2 px-5 rounded-md" style="color:black">
-                        <ion-icon name="play" class="text-2xl"></ion-icon>
-                        <span class="ml-3 font-medium">
-                            Play
-                        </span>
-                    </button>
-    
+                    <a href ="{% url 'core:play' movie_id=movie.uuid %}">
+                        <button class="flex items-center bg-white py-2 px-5 rounded-md" style="color:black">
+                            <ion-icon name="play" class="text-2xl"></ion-icon>
+                            <span class="ml-3 font-medium">
+                                Play
+                            </span>
+                        </button>
+                    </a>
                     
                 </div>
             </div>
