--- a/myworld/templates/showMovie.html
+++ b/myworld/templates/showMovie.html
@@ -16,8 +16,20 @@ Movie
 
 {% include 'partials/navbar.html' %}
     <main class='bg-primary_black h-full w-full '>
+        {{movie |json_script:'movie_data'}}
         
-        <video src="assets/test.mp4" controls class="w-full h-screen player"></video>
+        <video src="" controls class="w-full h-screen player"></video>
         
     </main>
+
+    <script>
+            const videoEl = document.querySelector('video')
+            const movie_data = JSON.parse(document.getElementById('movie_data').textContext);
+
+            const url = new URL(location.href)
+
+            const video_parm = parseInt(url.searchParams.get("epi")) ? parseInt(url.searchParams.get('epi')) : 0
+            videoEl.setAttribute('src', `http://localhost:8000/media/${movie_data[video_parm].file}`)
+    </script>
+
     {% endblock content %}
